HikVision auto set NTP server
