# providers/hikvision/swagger.yml
@@ -327,6 +327,78 @@ paths:
           description: "Successful operation"
           schema:
             $ref: "#/definitions/SystemStatus"
+  /System/time:
+    get:
+      operationId: "getTime"
+      tags:
+        - "system"
+      description: "Get the device time information."
+      responses:
+        200:
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/SystemTime"
+    put:
+      operationId: "setTime"
+      tags:
+        - "system"
+      description: "Udpate the device time information."
+      parameters:
+        - name: "Time"
+          in: "body"
+          schema:
+            $ref: "#/definitions/SystemTime"
+      responses:
+        200:
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Status"
+  /System/time/NtpServers:
+    get:
+      operationId: "getNtpServers"
+      tags:
+        - "system"
+      responses:
+        200:
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/SystemNtpServers"
+    put:
+      operationId: "setNtpServers"
+      tags:
+        - "system"
+      parameters:
+        - name: "NTPServerList"
+          in: "body"
+          schema:
+            $ref: "#/definitions/SystemNtpServers"
+      responses:
+        200:
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Status"
+  /System/time/ntpServers/{id}:
+    put:
+      operationId: "setNtpServer"
+      tags:
+        - "system"
+      summary: "It is used to update the configuration of a NTP server for the device."
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "NTP server ID"
+          required: true
+          type: "integer"
+          format: "uint64"
+        - name: "NTPServer"
+          in: "body"
+          schema:
+            $ref: "#/definitions/NTPServer"
+      responses:
+        200:
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Status"
   /System/updateFirmware:
     put:
       operationId: "updateSystemFirmware"
@@ -1361,6 +1433,72 @@ definitions:
               type: "integer"
               xml:
                 name: "DomeInfo>fanState"
+  SystemTime:
+    type: "object"
+    properties:
+      timeMode:
+        type: "string"
+        enum:
+          - "NTP"
+          - "manual"
+          - "timecorrect"
+        xml:
+          name: "timeMode"
+      localTime:
+        type: "string"
+        format: "date-time"
+        xml:
+          name: "localTime"
+      timeZone:
+        type: "string"
+        xml:
+          name: "timeZone"
+  SystemNtpServers:
+    type: "array"
+    xml:
+      name: "NTPServerList"
+    items:
+      $ref: "#/definitions/NTPServer"
+  NTPServer:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "uint64"
+        xml:
+          name: "NTPServer>id"
+      addressingFormatType:
+        type: "string"
+        enum:
+          - "ipaddress"
+          - "hostname"
+        xml:
+          name: "NTPServer>addressingFormatType"
+      hostName:
+        type: "string"
+        x-nullable: true
+        xml:
+          name: "NTPServer>hostName"
+      ipAddress:
+        type: "string"
+        x-nullable: true
+        xml:
+          name: "NTPServer>ipAddress"
+      ipv6Address:
+        type: "string"
+        x-nullable: true
+        xml:
+          name: "NTPServer>ipv6Address"
+      portNo:
+        type: "integer"
+        format: "uint64"
+        xml:
+          name: "NTPServer>portNo"
+      synchronizeInterval:
+        type: "integer"
+        format: "uint64"
+        xml:
+          name: "NTPServer>synchronizeInterval"
   SystemUpgradeStatus:
     type: "object"
     properties:
